update like functions
