# dist/swagger.json
@@ -38,9 +38,7 @@
             "post": {
                 "summary": "Вход",
                 "description": "Вход пользователя",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -55,10 +53,7 @@
                                         "type": "string"
                                     }
                                 },
-                                "required": [
-                                    "email",
-                                    "password"
-                                ]
+                                "required": ["email", "password"]
                             }
                         }
                     }
@@ -98,9 +93,7 @@
             "post": {
                 "summary": "Регистрация",
                 "description": "Регистрация пользователя",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -121,12 +114,7 @@
                                         "type": "string"
                                     }
                                 },
-                                "required": [
-                                    "email",
-                                    "password",
-                                    "username",
-                                    "photo"
-                                ]
+                                "required": ["email", "password", "username", "photo"]
                             }
                         }
                     }
@@ -172,9 +160,7 @@
             "post": {
                 "summary": "Выход",
                 "description": "Выход пользователя",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "responses": {
                     "200": {
                         "description": "Успешный выход",
@@ -201,9 +187,7 @@
             "patch": {
                 "summary": "Обновление токена",
                 "description": "Обновление токена доступа",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -215,9 +199,7 @@
                                         "type": "string"
                                     }
                                 },
-                                "required": [
-                                    "refreshToken"
-                                ]
+                                "required": ["refreshToken"]
                             }
                         }
                     }
@@ -257,9 +239,7 @@
             "post": {
                 "summary": "Восстановление пароля",
                 "description": "Запрос на восстановление пароля. Пользователь должен ввести свой email, а URL-адрес фронтенда должен автоматически браться из текущей ссылки для перенаправления после успешного сброса. Пример запроса:\n\n```javascript\nconst data = { email: inputValue, frontEndUrl: window.location.href };\n```",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -310,9 +290,7 @@
             "patch": {
                 "summary": "Сброс пароля",
                 "description": "Сброс пароля пользователя. Пользователь должен ввести новый пароль и подтвердить его. Токен для сброса пароля передается через параметры URL. Пример запроса:\n\n```javascript\nconst [searchParams] = useSearchParams();\nconst token = searchParams.get('token');\nconst data = { token, newPassword: inputValue };\n```",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -327,10 +305,7 @@
                                         "type": "string"
                                     }
                                 },
-                                "required": [
-                                    "token",
-                                    "newPassword"
-                                ]
+                                "required": ["token", "newPassword"]
                             }
                         }
                     }
@@ -364,9 +339,7 @@
             "get": {
                 "summary": "Получить пользователя",
                 "description": "Получение информации о пользователе",
-                "tags": [
-                    "Аутентификация"
-                ],
+                "tags": ["Аутентификация"],
                 "responses": {
                     "200": {
                         "description": "Успешное получение данных пользователя",
@@ -409,7 +382,7 @@
                             }
                         }
                     },
-                    "404": {
+                    "401": {
                         "description": "Пользователь не аутентифицирован"
                     },
                     "500": {
@@ -422,9 +395,7 @@
             "post": {
                 "summary": "Загрузка файла пользователя",
                 "description": "Пример кода загрузки файла\n\n```js\nconst [selectedFile, setSelectedFile] = useState<File | null>(null);\nsetSelectedFile(event.target.files[0]);\n\nconst formData = new FormData();\nformData.append('avatar', selectedFile);\n\nconst response = await axios.post(\n  `${import.meta.env.VITE_PUBLIC_API_URL}/upload/avatar`,\n  formData\n);\nconsole.log(response.data);\n```",
-                "tags": [
-                    "Загрузка файлов"
-                ],
+                "tags": ["Загрузка файлов"],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -475,9 +446,7 @@
             "post": {
                 "summary": "Загрузка файлов пользователя",
                 "description": "Пример кода загрузки нескольких файлов (до 10 файлов одновременно)\n\n```js\nconst [selectedFiles, setSelectedFiles] = useState<FileList | null>(null);\nsetSelectedFiles(event.target.files);\n\nconst formData = new FormData();\nArray.from(selectedFiles).forEach(file => {\n  formData.append('files', file);\n});\n\nconst response = await axios.post(\n  `${import.meta.env.VITE_PUBLIC_API_URL}/upload/files`,\n  formData\n);\nconsole.log(response.data);\n```",
-                "tags": [
-                    "Загрузка файлов"
-                ],
+                "tags": ["Загрузка файлов"],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -534,9 +503,7 @@
             "get": {
                 "summary": "Получение всех постов",
                 "description": "Получение списка всех постов",
-                "tags": [
-                    "Посты"
-                ],
+                "tags": ["Посты"],
                 "responses": {
                     "200": {
                         "description": "Успешное получение постов",
@@ -561,10 +528,7 @@
                                             },
                                             "mediaType": {
                                                 "type": "string",
-                                                "enum": [
-                                                    "PHOTO",
-                                                    "VIDEO"
-                                                ]
+                                                "enum": ["PHOTO", "VIDEO"]
                                             },
                                             "createdAt": {
                                                 "type": "string",
@@ -590,9 +554,7 @@
             "get": {
                 "summary": "Получение постов текущего пользователя",
                 "description": "Получение списка постов, созданных текущим авторизованным пользователем",
-                "tags": [
-                    "Посты"
-                ],
+                "tags": ["Посты"],
                 "responses": {
                     "200": {
                         "description": "Успешное получение постов текущего пользователя",
@@ -617,10 +579,7 @@
                                             },
                                             "mediaType": {
                                                 "type": "string",
-                                                "enum": [
-                                                    "PHOTO",
-                                                    "VIDEO"
-                                                ]
+                                                "enum": ["PHOTO", "VIDEO"]
                                             },
                                             "createdAt": {
                                                 "type": "string",
@@ -649,9 +608,7 @@
             "get": {
                 "summary": "Получение постов другого пользователя",
                 "description": "Получение списка постов, созданных другим пользователем по его ID",
-                "tags": [
-                    "Посты"
-                ],
+                "tags": ["Посты"],
                 "parameters": [
                     {
                         "name": "id",
@@ -685,10 +642,7 @@
                                         },
                                         "mediaType": {
                                             "type": "string",
-                                            "enum": [
-                                                "PHOTO",
-                                                "VIDEO"
-                                            ]
+                                            "enum": ["PHOTO", "VIDEO"]
                                         },
                                         "createdAt": {
                                             "type": "string",
@@ -713,9 +667,7 @@
             "post": {
                 "summary": "Создание нового поста",
                 "description": "Создание нового поста с заголовком, URL медиа и типом медиа",
-                "tags": [
-                    "Посты"
-                ],
+                "tags": ["Посты"],
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -731,17 +683,10 @@
                                     },
                                     "mediaType": {
                                         "type": "string",
-                                        "enum": [
-                                            "PHOTO",
-                                            "VIDEO"
-                                        ]
+                                        "enum": ["PHOTO", "VIDEO"]
                                     }
                                 },
-                                "required": [
-                                    "caption",
-                                    "mediaUrl",
-                                    "mediaType"
-                                ]
+                                "required": ["caption", "mediaUrl", "mediaType"]
                             }
                         }
                     }
@@ -768,10 +713,7 @@
                                         },
                                         "mediaType": {
                                             "type": "string",
-                                            "enum": [
-                                                "PHOTO",
-                                                "VIDEO"
-                                            ]
+                                            "enum": ["PHOTO", "VIDEO"]
                                         },
                                         "createdAt": {
                                             "type": "string",
@@ -802,9 +744,7 @@
             "delete": {
                 "summary": "Удаление поста",
                 "description": "Удаление поста по его ID",
-                "tags": [
-                    "Посты"
-                ],
+                "tags": ["Посты"],
                 "parameters": [
                     {
                         "name": "id",
@@ -876,6 +816,9 @@
                                         },
                                         "likesCount": {
                                             "type": "integer"
+                                        },
+                                        "isLike": {
+                                            "type": "boolean"
                                         }
                                     }
                                 }
