# src/types/index.ts
@@ -1,0 +1,6 @@
+export interface IUser {
+	id: number;
+	email: string;
+	username: string;
+	photo: string;
+}
